Fix: Accesibility Contrast Issues

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
   color: #172b4d;
   margin-top: 0;
   margin-bottom: 0;
+  background-color: white;
 }
 
 .titleContainer h3 {
@@ -73,8 +74,9 @@ body {
   font-weight: 700;
   font-size: 40px;
   margin-top: 15px;
-  color: rgb(16, 185, 81);
+  color: #098936;
   width: 70%;
+  background-color: white;
 }
 
 .headlineDescription p {
@@ -86,6 +88,7 @@ body {
   width: 90%;
   margin: auto;
   margin-bottom: 40px;
+  background-color: white;
 }
 
 .headlineDescription h3 {
@@ -129,7 +132,7 @@ body {
 
 .bio-card-tags li {
   background-color: white;
-  color: rgb(16, 185, 81);
+  color: #098936;
   padding: 12px;
   text-transform: capitalize;
 }
@@ -242,7 +245,7 @@ body {
 }
 
 .seeProjectBtn {
-  background-color: rgb(16, 185, 81);
+  background-color: #098936;
   padding: 12px;
   border-radius: 4px;
   font-weight: 500;
@@ -272,6 +275,7 @@ body {
   font-weight: 700;
   line-height: 32px;
   color: #172b4d;
+  background-color: white;
 }
 
 .aboutmeDescription {
@@ -283,6 +287,7 @@ body {
   width: 90%;
   margin: auto;
   margin-bottom: 40px;
+  background-color: white;
 }
 
 .resumeBtn {
@@ -432,6 +437,10 @@ textarea {
 
   .headlineDescription p {
     width: 65%;
+  }
+
+  .headlineDescription h3 {
+    background-color: white;
   }
 
   .headlineContainer {
